2002-09-21  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/xml/repr.c (sp_repr_merge): Duplicate node without id key

	* src/sp-path.c (sp_path_build): Set fill to none for old version open path

	* src/bonobo/embeddable-document.c (sp_embeddable_document_pf_load): New
	document constructor signature, thanks to Ted Gould
	(sp_embeddable_document_ps_load): Ditto
	(sp_embeddable_document_new): Ditto

	* src/help.c (sp_help_about): use sp_text_set_repr_multiline

	* src/style.c (sp_style_write_difference): Rewind pointer

	* src/sp-ellipse.c (sp_genericellipse_set_shape): Request modified
	(sp_arc_modified): Implement, write path attribute

2002-09-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-object.c (sp_object_private_write): Duplicate repr if needed

	* src/xml/repr-util.c (sp_repr_set_double_default): New method

	* src/sp-rect.c (sp_rect_write): Set default on radiuses

	* src/sp-root.c (sp_root_write): Set namespaces here

	* src/xml/repr.c (sp_repr_document_new): Set doctype and comment

	* src/xml/repr-io.c (sp_repr_read_file): Set doctype and comment if SVG
	(sp_repr_read_mem): Ditto
	(sp_repr_save_stream): Save doctype and comment

2002-09-19  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_string_set_shape): Update position array
	(sp_text_get_cursor_coords): New method
	(sp_text_set_shape): Set tspan position to text, if unset; Limit block
	to tspans with unspecified role
	(sp_text_insert_line): Implement

	* src/text-context.c (sp_text_context_setup): Set blink to 250ms
	(sp_text_context_selection_modified): Implement, update cursor position
	(sp_text_context_selection_changed): Ditto
	(sp_text_context_root_handler): Cursor placement, insertion and deletion
	work as they should

	* src/display/nr-arena-shape.c (nr_arena_shape_update): Do not try to
	fill paths consisting of single lineto

	* src/gradient-chemistry.c (sp_gradient_ensure_private_normalized): Only keep
	if hrefcount == 1 (fixed bug)
